# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my_lint.yml
gendiff/: cli.py  formatter.py  gendiff.py  parser.py  tree.py
gendiff/formatters/: __innit__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: json
